* Thu Jun 06 2019 Steven Pritchard <steven.pritchard@onyxpoint.com> - 6.3.0-0
- Add v2 compliance_markup data
- Drop support for Puppet 4
- Add support for Puppet 6
- Add support for puppetlabs-stdlib 6

* Tue Mar 19 2019 Liz Nemsick <lnemsick.simp@gmail.com> - 6.2.2-0
- Replace use of simplib's deprecated Puppet 3 validate_between
  with Simplib::Cron::* types.  This change allows more flexibility
  in cron scheduling.

* Thu Mar 07 2019 Liz Nemsick <lnemsick.simp@gmail.com> - 6.2.1-0
- Update the upper bound of stdlib to < 6.0.0
- Update a URL in the README.md

* Mon Oct 29 2018 Jeanne Greoulich <jeanne.greulich@onyxpoint.com> - 6.2.0-0
- Update badges in README.md
- Static asset update for puppet 5

* Thu Oct 11 2018 Nick Miller <nick.miller@onyxpoint.com> - 6.2.0-0
- Added $package_ensure parameter
  - Changed the package from 'latest' to 'installed'
  - It will also respect `simp_options::package_ensure`

* Fri Sep 07 2018 Liz Nemsick <lnemsick.simp@gmail.com> - 6.2.0-0
- Update Hiera 4 to Hiera 5

* Fri Jul 13 2018 Trevor Vaughan <tvaughan@onyxpoint.com> - 6.1.4-0
- Tested against Puppet 5 and Oracle Linux

* Thu Jul 12 2018 Trey Dockendorf <tdockendorf@osc.edu> - 6.1.3-0
- Add `aide::cron_command` to allow user modification.
- Ensure that the package is explicitly installed before any dependent
  resources.

* Tue Jun 26 2018 Liz Nemsick <lnemsick.simp@gmail.com> - 6.1.3-0
- Update version range of auditd dependency in metadata.json

* Thu Nov 30 2017 Steven Pritchard <steven.pritchard@onyxpoint.com> - 6.1.2-0
- Update README.md from puppet strings

* Thu Oct 26 2017 Liz Nemsick <lnemsick.simp@gmail.com> - 6.1.1-0
- Retain output database upon AIDE database update for SCAP
  Security Guide OVAL check
  xccdf_org.ssgproject.content_rule_aide_build_database

* Tue Sep 05 2017 Liz Nemsick <lnemsick.simp@gmail.com> - 6.1.0-0
- Fixed bug whereby aide reports/errors were not being sent to syslog.
  AIDE can now be configured to report to syslog, itself.