@@ -2,15 +2,16 @@
 .yardoc
 dist/
 pkg/
-spec/fixtures/
 spec/rp_env/
-!/spec/hieradata/default.yaml
-!/spec/fixtures/site.pp
+spec/fixtures/**
+!spec/fixtures/site.pp
+!spec/fixtures/inspec_profiles
+.bundle/
 .rspec_system
 .vagrant/
-.bundle/
 Gemfile.lock
-vendor/
+doc/
 junit/
 log/
-doc/
+sec_results/
+vendor/
