@@ -15,13 +15,22 @@ HOSTS:
     platform: el-6-x86_64
     box: centos/6
     hypervisor: <%= hypervisor %>
+    yum_repos:
+      chef-current:
+        baseurl: 'https://packages.chef.io/repos/yum/current/el/7/$basearch'
+        gpgkeys:
+          - https://packages.chef.io/chef.asc
   el7:
     roles:
       - client
     platform: el-7-x86_64
     box: centos/7
     hypervisor: <%= hypervisor %>
-
+    yum_repos:
+      chef-current:
+        baseurl: 'https://packages.chef.io/repos/yum/current/el/7/$basearch'
+        gpgkeys:
+          - https://packages.chef.io/chef.asc
 CONFIG:
   log_level: verbose
   synced_folder : disabled
