@@ -1,0 +1,1 @@
+CentOS-7-disa_stig/
